--- a/index.html
+++ b/index.html
@@ -3,10 +3,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vodoco Services</title>
+  <title>Vodoco Services – Professional Cleaning</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Vodoco Services 🚀</h1>
-  <p>Welcome to my new landing page!</p>
+  <!-- Header -->
+  <header class="header">
+    <img src="logo-vodoco.png" alt="Vodoco Services Logo" class="logo">
+    <h1>Vodoco Services</h1>
+    <p class="slogan">Professional Care. Honest Results.</p>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h2>Spotless results, guaranteed.</h2>
+    <p>Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.</p>
+    <a href="CleaningQuoteApp/" class="btn">Get a Quote</a>
+  </section>
+
+  <!-- Services -->
+  <section class="services">
+    <h2>Our Services</h2>
+    <div class="service-list">
+      <div class="service">Domestic Cleaning</div>
+      <div class="service">Office & Strata</div>
+      <div class="service">Carpet Steam</div>
+      <div class="service">End of Tenancy</div>
+    </div>
+  </section>
+
+  <!-- Pricing -->
+  <section class="pricing">
+    <h2>Simple, Transparent Pricing</h2>
+    <ul>
+      <li>Domestic – from $139</li>
+      <li>Carpet Steam – from $99</li>
+      <li>End of Tenancy – from $299</li>
+    </ul>
+    <p class="note">* Final price depends on size, condition, and access.</p>
+  </section>
+
+  <!-- Testimonials -->
+  <section class="testimonials">
+    <h2>What clients say</h2>
+    <blockquote>“Fast, friendly, and the carpets look brand new.” – Emma, Hillsdale</blockquote>
+    <blockquote>“End of lease passed with full bond. Highly recommend.” – Liam, Maroubra</blockquote>
+    <blockquote>“Great attention to detail – office looks sharp every week.” – Sofia, Randwick</blockquote>
+  </section>
+
+  <!-- Contact -->
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <p><strong>Phone:</strong> 0413 387 095</p>
+    <p><strong>Email:</strong> info@vodococleaning.com.au</p>
+    <p><strong>Address:</strong> 3303/39 Rhodes St, Hillsdale NSW 2036</p>
+    <p><strong>ABN:</strong> 31 595 981 360</p>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>© 2025 Vodoco Services. All rights reserved.</p>
+  </footer>
 </body>
 </html>
