--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <section class="contact">
     <h2>Contact Us</h2>
     <p><strong>Phone:</strong> 0413 387 095</p>
-    <p><strong>Email:</strong> info@vodococleaning.com.au</p>
+    <p><strong>Email:</strong> hello.vodoco@outlook.com</p>
     <p><strong>Address:</strong> 3303/39 Rhodes St, Hillsdale NSW 2036</p>
     <p><strong>ABN:</strong> 31 595 981 360</p>
   </section>
