--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   <section class="hero">
     <h2>Spotless results, guaranteed.</h2>
     <p>Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.</p>
-    <a href="CleaningQuoteApp/" class="btn">Get a Quote</a>
+   <a href="CleaningQuoteApp/quote.html" class="btn">Get a Quote</a>
+
   </section>
 
   <!-- Services -->
