--- a/index.html
+++ b/index.html
@@ -34,23 +34,83 @@
   </section>
 
   <!-- Pricing -->
-  <section class="pricing">
-    <h2>Simple, Transparent Pricing</h2>
-    <ul>
-      <li>Domestic – from $139</li>
-      <li>Carpet Steam – from $99</li>
-      <li>End of Tenancy – from $299</li>
-    </ul>
-    <p class="note">* Final price depends on size, condition, and access.</p>
-  </section>
+  <!-- Pricing -->
+<section class="pricing" id="pricing">
+  <h2>Domestic Cleaning Packages – Eastern Suburbs</h2>
 
-  <!-- Testimonials -->
-  <section class="testimonials">
-    <h2>What clients say</h2>
-    <blockquote>“Fast, friendly, and the carpets look brand new.” – Emma, Hillsdale</blockquote>
-    <blockquote>“End of lease passed with full bond. Highly recommend.” – Liam, Maroubra</blockquote>
-    <blockquote>“Great attention to detail – office looks sharp every week.” – Sofia, Randwick</blockquote>
-  </section>
+  <div class="price-note">
+    <p>
+      ✅ These fixed prices apply to <strong>Domestic Cleaning</strong> only.<br>
+      For all other cleaning services (Carpet Steam, End of Tenancy, Office/Strata, High Pressure, etc.), please request a quote.
+    </p>
+  </div>
+
+  <table class="price-table">
+    <thead>
+      <tr>
+        <th>Property</th>
+        <th>Weekly</th>
+        <th>Bi-weekly</th>
+        <th>Monthly</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Studio / 1 BR – 1 BA</td>
+        <td>$129</td>
+        <td>$139</td>
+        <td>$149</td>
+      </tr>
+      <tr>
+        <td>2 BR – 1 BA</td>
+        <td>$149</td>
+        <td>$159</td>
+        <td>$169</td>
+      </tr>
+      <tr>
+        <td>2 BR – 2 BA</td>
+        <td>$169</td>
+        <td>$179</td>
+        <td>$209</td>
+      </tr>
+      <tr>
+        <td>3 BR – 2 BA</td>
+        <td>$189</td>
+        <td>$199</td>
+        <td>$209</td>
+      </tr>
+      <tr>
+        <td>3 BR – 3 BA</td>
+        <td>$209</td>
+        <td>$219</td>
+        <td>$229</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div class="addons">
+    <h3>Hourly Rates</h3>
+    <ul>
+      <li>Weekly — $55/hr</li>
+      <li>Bi-weekly — $58/hr</li>
+      <li>Monthly — $60/hr</li>
+    </ul>
+
+    <h3>Extras (optional)</h3>
+    <ul>
+      <li>Oven cleaning — $35</li>
+      <li>Interior fridge — $25</li>
+    </ul>
+  </div>
+
+  <p class="note">* Prices include GST.<br>
+    * If you are looking for negotiable prices, give Julio a call:
+    <a href="tel:+61413387095">0413 387 095</a>.
+  </p>
+
+  <a class="btn" href="CleaningQuoteApp/quote.html">Request a Quote for Other Services</a>
+</section>
+
 
   <!-- Contact -->
   <section class="contact">
