--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
 </head>
 <body>
-  <!-- Header -->
   <header class="header">
-    <img src="logo-vodoco.png" alt="Vodoco Services Logo" class="logo">
+  <img src="logo-vodoco.png" alt="Vodoco Services Logo" class="logo">
+  <div>
     <h1>Vodoco Services</h1>
     <p class="slogan">Professional Care. Honest Results.</p>
-  </header>
+  </div>
+</header>
+
 
   <!-- Hero -->
   <section class="hero">
