--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vodoco Services – Professional Cleaning</title>
+  <title>Vodoco Services – Professional Cleaning</title
+     <!-- Primary SEO -->
+<meta name="description" content="Vodoco Services – Professional Cleaning in Sydney. Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest prices, reliable team. Call 0413 387 095.">
+<link rel="canonical" href="https://hellojulio.github.io/">
+
+<!-- Open Graph (Facebook/WhatsApp) -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://hellojulio.github.io/">
+<meta property="og:title" content="Vodoco Services – Professional Cleaning">
+<meta property="og:description" content="Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest results.">
+<meta property="og:image" content="https://hellojulio.github.io/og-image.png">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Vodoco Services – Professional Cleaning">
+<meta name="twitter:description" content="Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest results.">
+<meta name="twitter:image" content="https://hellojulio.github.io/og-image.png">
+
+<!-- Contact/Geo (opcional) -->
+<meta name="telephone" content="+61413387095">
+<meta name="email" content="hello.vodoco@outlook.com">
+                                             
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+<link rel="shortcut icon" href="/favicon.ico">
+
+<!-- Apple / iOS icon -->
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+<!-- Theme color para móvil -->
+<meta name="theme-color" content="#007f5f">
 
 </head>
 <body>
@@ -25,6 +56,7 @@
    <a href="CleaningQuoteApp/quote.html" class="btn">Get a Quote</a>
 
   </section>
+<a class="btn" href="tel:+61413387095">Call now: 0413 387 095</a>
 
   <!-- Services -->
   <section class="services">
