--- a/index.html
+++ b/index.html
@@ -3,64 +3,97 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vodoco Services – Professional Cleaning</title
-     <!-- Primary SEO -->
-<meta name="description" content="Vodoco Services – Professional Cleaning in Sydney. Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest prices, reliable team. Call 0413 387 095.">
-<link rel="canonical" href="https://hellojulio.github.io/">
+  <title>Vodoco Services – Professional Cleaning</title>
 
-<!-- Open Graph (Facebook/WhatsApp) -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://hellojulio.github.io/">
-<meta property="og:title" content="Vodoco Services – Professional Cleaning">
-<meta property="og:description" content="Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest results.">
-<meta property="og:image" content="https://hellojulio.github.io/og-image.png">
+  <!-- Primary SEO -->
+  <meta name="description" content="Vodoco Services – Professional Cleaning in Sydney. Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest prices, reliable team. Call 0413 387 095.">
+  <link rel="canonical" href="https://hellojulio.github.io/">
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Vodoco Services – Professional Cleaning">
-<meta name="twitter:description" content="Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest results.">
-<meta name="twitter:image" content="https://hellojulio.github.io/og-image.png">
+  <!-- Open Graph (Facebook/WhatsApp) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://hellojulio.github.io/">
+  <meta property="og:title" content="Vodoco Services – Professional Cleaning">
+  <meta property="og:description" content="Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest results.">
+  <meta property="og:image" content="https://hellojulio.github.io/og-image.png">
 
-<!-- Contact/Geo (opcional) -->
-<meta name="telephone" content="+61413387095">
-<meta name="email" content="hello.vodoco@outlook.com">
-                                             
-  <link rel="stylesheet" href="styles.css">
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Vodoco Services – Professional Cleaning">
+  <meta name="twitter:description" content="Domestic, Office & Strata, Carpet Steam, End of Tenancy. Honest results.">
+  <meta name="twitter:image" content="https://hellojulio.github.io/og-image.png">
+
+  <!-- Contact/Geo (optional) -->
+  <meta name="telephone" content="+61413387095">
+  <meta name="email" content="hello.vodoco@outlook.com">
+
+  <!-- Theme color para móvil -->
+  <meta name="theme-color" content="#007f5f">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+  <!-- Fonts & CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-<!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
-<link rel="shortcut icon" href="/favicon.ico">
+  <link rel="stylesheet" href="styles.css">
 
-<!-- Apple / iOS icon -->
-<link rel="apple-touch-icon" href="/apple-touch-icon.png">
-
-<!-- Theme color para móvil -->
-<meta name="theme-color" content="#007f5f">
-
+  <!-- LocalBusiness JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"LocalBusiness",
+    "name":"Vodoco Services",
+    "image":"https://hellojulio.github.io/og-image.png",
+    "url":"https://hellojulio.github.io",
+    "telephone":"+61 413 387 095",
+    "email":"hello.vodoco@outlook.com",
+    "address":{
+      "@type":"PostalAddress",
+      "streetAddress":"3303/39 Rhodes St",
+      "addressLocality":"Hillsdale",
+      "addressRegion":"NSW",
+      "postalCode":"2036",
+      "addressCountry":"AU"
+    },
+    "areaServed":"Sydney",
+    "priceRange":"$$",
+    "description":"Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.",
+    "sameAs":[
+      "https://maps.google.com/?q=3303/39%20Rhodes%20St,%20Hillsdale%20NSW%202036"
+    ]
+  }
+  </script>
 </head>
-<body>
-  <header class="header">
-  <img src="logo-vodoco.png" alt="Vodoco Services Logo" class="logo">
-  <div>
-    <h1>Vodoco Services</h1>
-    <p class="slogan">Professional Care. Honest Results.</p>
-  </div>
-</header>
 
+<body>
+  <header class="header" role="banner">
+    <img src="logo-vodoco.png" alt="Vodoco Services Logo" class="logo" width="96" height="96">
+    <div>
+      <h1>Vodoco Services</h1>
+      <p class="slogan">Professional Care. Honest Results.</p>
+    </div>
+  </header>
 
   <!-- Hero -->
-  <section class="hero">
-    <h2>Spotless results, guaranteed.</h2>
+  <section class="hero" aria-labelledby="hero-title">
+    <h2 id="hero-title">Spotless results, guaranteed.</h2>
     <p>Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.</p>
-   <a href="CleaningQuoteApp/quote.html" class="btn">Get a Quote</a>
-
+    <div class="cta-row">
+      <a href="CleaningQuoteApp/quote.html" class="btn">Get a Quote</a>
+      <a class="btn btn-outline" href="tel:+61413387095" aria-label="Call now">Call: 0413 387 095</a>
+      <a class="btn btn-whatsapp" href="https://wa.me/61413387095?text=Hi%20Julio%2C%20I%27d%20like%20a%20cleaning%20quote" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
+        WhatsApp
+      </a>
+    </div>
   </section>
-<a class="btn" href="tel:+61413387095">Call now: 0413 387 095</a>
 
   <!-- Services -->
-  <section class="services">
-    <h2>Our Services</h2>
+  <section class="services" aria-labelledby="services-title">
+    <h2 id="services-title">Our Services</h2>
     <div class="service-list">
       <div class="service">Domestic Cleaning</div>
       <div class="service">Office & Strata</div>
@@ -70,96 +103,105 @@
   </section>
 
   <!-- Pricing -->
-  <!-- Pricing -->
-<section class="pricing" id="pricing">
-  <h2>Domestic Cleaning Packages – Eastern Suburbs</h2>
+  <section class="pricing" id="pricing" aria-labelledby="pricing-title">
+    <h2 id="pricing-title">Domestic Cleaning Packages – Eastern Suburbs</h2>
 
-  <div class="price-note">
-    <p>
-      ✅ These fixed prices apply to <strong>Domestic Cleaning</strong> only.<br>
-      For all other cleaning services (Carpet Steam, End of Tenancy, Office/Strata, High Pressure, etc.), please request a quote.
+    <div class="price-note">
+      <p>
+        ✅ These fixed prices apply to <strong>Domestic Cleaning</strong> only.<br>
+        For all other cleaning services (Carpet Steam, End of Tenancy, Office/Strata, High Pressure, etc.), please request a quote.
+      </p>
+    </div>
+
+    <table class="price-table">
+      <thead>
+        <tr>
+          <th scope="col">Property</th>
+          <th scope="col">Weekly</th>
+          <th scope="col">Bi-weekly</th>
+          <th scope="col">Monthly</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Studio / 1 BR – 1 BA</td>
+          <td>$129</td>
+          <td>$139</td>
+          <td>$149</td>
+        </tr>
+        <tr>
+          <td>2 BR – 1 BA</td>
+          <td>$149</td>
+          <td>$159</td>
+          <td>$169</td>
+        </tr>
+        <tr>
+          <td>2 BR – 2 BA</td>
+          <td>$169</td>
+          <td>$179</td>
+          <td>$209</td>
+        </tr>
+        <tr>
+          <td>3 BR – 2 BA</td>
+          <td>$189</td>
+          <td>$199</td>
+          <td>$209</td>
+        </tr>
+        <tr>
+          <td>3 BR – 3 BA</td>
+          <td>$209</td>
+          <td>$219</td>
+          <td>$229</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="addons">
+      <h3>Hourly Rates</h3>
+      <ul>
+        <li>Weekly — $55/hr</li>
+        <li>Bi-weekly — $58/hr</li>
+        <li>Monthly — $60/hr</li>
+      </ul>
+
+      <h3>Extras (optional)</h3>
+      <ul>
+        <li>Oven cleaning — $35</li>
+        <li>Interior fridge — $25</li>
+      </ul>
+    </div>
+
+    <p class="note">
+      * Prices include GST.<br>
+      * If you are looking for negotiable prices, give Julio a call:
+      <a href="tel:+61413387095">0413 387 095</a>.
     </p>
-  </div>
 
-  <table class="price-table">
-    <thead>
-      <tr>
-        <th>Property</th>
-        <th>Weekly</th>
-        <th>Bi-weekly</th>
-        <th>Monthly</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Studio / 1 BR – 1 BA</td>
-        <td>$129</td>
-        <td>$139</td>
-        <td>$149</td>
-      </tr>
-      <tr>
-        <td>2 BR – 1 BA</td>
-        <td>$149</td>
-        <td>$159</td>
-        <td>$169</td>
-      </tr>
-      <tr>
-        <td>2 BR – 2 BA</td>
-        <td>$169</td>
-        <td>$179</td>
-        <td>$209</td>
-      </tr>
-      <tr>
-        <td>3 BR – 2 BA</td>
-        <td>$189</td>
-        <td>$199</td>
-        <td>$209</td>
-      </tr>
-      <tr>
-        <td>3 BR – 3 BA</td>
-        <td>$209</td>
-        <td>$219</td>
-        <td>$229</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div class="addons">
-    <h3>Hourly Rates</h3>
-    <ul>
-      <li>Weekly — $55/hr</li>
-      <li>Bi-weekly — $58/hr</li>
-      <li>Monthly — $60/hr</li>
-    </ul>
-
-    <h3>Extras (optional)</h3>
-    <ul>
-      <li>Oven cleaning — $35</li>
-      <li>Interior fridge — $25</li>
-    </ul>
-  </div>
-
-  <p class="note">* Prices include GST.<br>
-    * If you are looking for negotiable prices, give Julio a call:
-    <a href="tel:+61413387095">0413 387 095</a>.
-  </p>
-
-  <a class="btn" href="CleaningQuoteApp/quote.html">Request a Quote for Other Services</a>
-</section>
-
+    <a class="btn" href="CleaningQuoteApp/quote.html">Request a Quote for Other Services</a>
+  </section>
 
   <!-- Contact -->
-  <section class="contact">
-    <h2>Contact Us</h2>
-    <p><strong>Phone:</strong> 0413 387 095</p>
-   <p><strong>Email:</strong> <a href="mailto:hello.vodoco@outlook.com">hello.vodoco@outlook.com</a></p>
-
+  <section class="contact" aria-labelledby="contact-title">
+    <h2 id="contact-title">Contact Us</h2>
+    <p><strong>Phone:</strong> <a href="tel:+61413387095">0413 387 095</a></p>
+    <p><strong>Email:</strong> <a href="mailto:hello.vodoco@outlook.com">hello.vodoco@outlook.com</a></p>
     <p><strong>Address:</strong> 3303/39 Rhodes St, Hillsdale NSW 2036</p>
     <p><strong>ABN:</strong> 31 595 981 360</p>
+    <!-- (Opcional) Embed del mapa si quieres mostrarlo en página:
+    <div class="map-embed">
+      <iframe
+        title="Vodoco Services Location"
+        width="100%" height="300" style="border:0"
+        loading="lazy" allowfullscreen
+        referrerpolicy="no-referrer-when-downgrade"
+        src="https://www.google.com/maps?q=3303/39%20Rhodes%20St,%20Hillsdale%20NSW%202036&output=embed">
+      </iframe>
+    </div>
+    -->
   </section>
 
   <!-- Footer -->
-  <footer class="footer">
+  <footer class="footer" role="contentinfo">
     <p>© 2025 Vodoco Services. All rights reserved.</p>
   </footer>
 </body>
