--- a/about.html
+++ b/about.html
@@ -38,6 +38,28 @@
 
   <main class="container">
     <section class="card">
+      <main class="container">
+  <section class="card">
+    <h1>About Us</h1>
+    <p>We are a local cleaning business serving Sydney’s Eastern Suburbs. Our team delivers reliable, detail-oriented and friendly service with fair pricing and a 100% satisfaction guarantee.</p>
+    <p>Services include domestic cleaning, strata & office cleaning, high-pressure wash, carpet steam cleaning and end-of-tenancy cleans.</p>
+    <div class="btnbar">
+      <a href="index.html" class="button ghost">Back to Home</a>
+      <a href="quote.html" class="button primary">Get Quote</a>
+    </div>
+  </section>
+
+  <!-- Aquí agregas la galería -->
+  <section class="card">
+    <h2>Our Work</h2>
+    <div class="gallery">
+      <img src="cleaning-chair.jpg" alt="Upholstery cleaning – dining chairs">
+      <img src="carpet-room.jpg" alt="Carpet steam cleaning – bedroom">
+      <img src="carpet-stairs.jpg" alt="Carpet steam cleaning – staircase">
+    </div>
+  </section>
+</main>
+
       <h1>About Us</h1>
       <p>We are a local cleaning business serving Sydney’s Eastern Suburbs. Our team delivers reliable, detail-oriented and friendly service with fair pricing and a 100% satisfaction guarantee.</p>
       <p>Services include domestic cleaning, strata & office cleaning, high-pressure wash, carpet steam cleaning and end-of-tenancy cleans.</p>
