--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
     header img{max-height:60px;display:block;margin:0 auto 8px}
     .hero img{width:100%;max-height:520px;object-fit:cover;border-bottom:6px solid var(--brand)}
     .container{max-width:980px;margin:22px auto;padding:16px}
-    .card{background:var(--paper);border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.06);padding:22px}
-    h1{color:var(--brand);margin:0 0 12px}
+    .card{background:var(--paper);border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.06);padding:22px;margin-bottom:18px}
+    h1,h2{color:var(--brand);margin:0 0 12px}
     p{margin:0 0 12px}
     .btnbar{display:flex;gap:12px;flex-wrap:wrap;margin-top:10px}
     .button{display:inline-block;padding:10px 16px;border-radius:10px;text-decoration:none;font-weight:600}
@@ -21,6 +21,9 @@
     .button.ghost{border:2px solid var(--brand);color:var(--brand);background:transparent}
     footer.site{padding:16px;text-align:center;color:#555}
     footer.site a{color:var(--brand);text-decoration:none}
+    /* Gallery grid */
+    .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin-top:8px}
+    .gallery img{width:100%;height:180px;object-fit:cover;border-radius:12px}
   </style>
 </head>
 <body>
@@ -37,29 +40,8 @@
   </section>
 
   <main class="container">
+    <!-- About -->
     <section class="card">
-      <main class="container">
-  <section class="card">
-    <h1>About Us</h1>
-    <p>We are a local cleaning business serving Sydney’s Eastern Suburbs. Our team delivers reliable, detail-oriented and friendly service with fair pricing and a 100% satisfaction guarantee.</p>
-    <p>Services include domestic cleaning, strata & office cleaning, high-pressure wash, carpet steam cleaning and end-of-tenancy cleans.</p>
-    <div class="btnbar">
-      <a href="index.html" class="button ghost">Back to Home</a>
-      <a href="quote.html" class="button primary">Get Quote</a>
-    </div>
-  </section>
-
-  <!-- Aquí agregas la galería -->
-  <section class="card">
-    <h2>Our Work</h2>
-    <div class="gallery">
-      <img src="cleaning-chair.jpg" alt="Upholstery cleaning – dining chairs">
-      <img src="carpet-room.jpg" alt="Carpet steam cleaning – bedroom">
-      <img src="carpet-stairs.jpg" alt="Carpet steam cleaning – staircase">
-    </div>
-  </section>
-</main>
-
       <h1>About Us</h1>
       <p>We are a local cleaning business serving Sydney’s Eastern Suburbs. Our team delivers reliable, detail-oriented and friendly service with fair pricing and a 100% satisfaction guarantee.</p>
       <p>Services include domestic cleaning, strata & office cleaning, high-pressure wash, carpet steam cleaning and end-of-tenancy cleans.</p>
@@ -69,10 +51,21 @@
         <a href="quote.html" class="button primary">Get Quote</a>
       </div>
     </section>
+
+    <!-- Galería con tus fotos reales -->
+    <section class="card">
+      <h2>Our Work</h2>
+      <div class="gallery">
+        <img src="cleaning-chair.jpg" alt="Upholstery cleaning – dining chairs">
+        <img src="carpet-room.jpg" alt="Carpet steam cleaning – bedroom">
+        <img src="carpet-stairs.jpg" alt="Carpet steam cleaning – staircase">
+      </div>
+    </section>
   </main>
 
   <footer class="site">
-    <div>3303/39 Rhodes St, Hillsdale NSW 2036 · ABN 31 595 981 360 · PayID 0413 387 095 ·
+    <div>
+      3303/39 Rhodes St, Hillsdale NSW 2036 · ABN 31 595 981 360 · PayID 0413 387 095 ·
       <a href="mailto:hello.vodoco@outlook.com">hello.vodoco@outlook.com</a>
     </div>
   </footer>
