--- a/about.html
+++ b/about.html
@@ -34,29 +34,25 @@
 <body>
 
   <header>
-    <!-- Cambia logo.png por tu archivo real si ya lo tienes -->
     <img src="logo.png" alt="Vodoco Services Logo" />
     <h2>Vodoco Services – Professional Cleaning</h2>
   </header>
 
-  <!-- HERO con tu foto real -->
   <section class="hero">
     <img src="cleaning-chair.jpg" alt="Vodoco Services – Upholstery & chair cleaning in action">
   </section>
 
   <main class="container">
-    <!-- About -->
     <section class="card">
       <h1>About Us</h1>
       <p>We are a local cleaning business serving Sydney’s Eastern Suburbs. Our team delivers reliable, detail-oriented and friendly service with fair pricing and a 100% satisfaction guarantee.</p>
       <p>Services include domestic cleaning, strata & office cleaning, high-pressure wash, carpet steam cleaning and end-of-tenancy cleans.</p>
       <div class="btnbar">
         <a href="index.html" class="button ghost">Back to Home</a>
-        <a href="quote.html" class="button primary">Get Quote</a>
+        <a href="https://hellojulio.github.io/CleaningQuoteApp/quote.html" class="button primary">Get Quote</a>
       </div>
     </section>
 
-    <!-- Galería con tus fotos reales -->
     <section class="card">
       <h2>Our Work</h2>
       <div class="gallery">
@@ -66,7 +62,6 @@
       </div>
     </section>
 
-    <!-- Testimonios -->
     <section class="card">
       <h2>What Our Clients Say</h2>
       <div class="testimonials">
