--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
     <h2 id="hero-title">Spotless results, guaranteed.</h2>
     <p>Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.</p>
     <div class="cta-row">
-      <a href="CleaningQuoteApp/quote.html" class="btn">Get a Quote</a>
+     <div class="btnbar">
+  <a href="about.html" class="button ghost">About Us</a>
+  <a href="CleaningQuoteApp/quote.html" class="button primary">Get Quote</a>
+</div>
+
       <a class="btn btn-outline" href="tel:+61413387095" aria-label="Call now">Call: 0413 387 095</a>
       <a class="btn btn-whatsapp" href="https://wa.me/61413387095?text=Hi%20Julio%2C%20I%27d%20like%20a%20cleaning%20quote" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
         WhatsApp
