--- a/about.html
+++ b/about.html
@@ -4,45 +4,80 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About – Vodoco Services</title>
+  <meta name="description" content="Vodoco Services – Professional Cleaning in Sydney. Domestic, strata, office, high-pressure, carpet steam, end-of-tenancy. Honest prices and guaranteed results.">
   <style>
     :root { --brand:#00796B; --ink:#333; --paper:#fff; --muted:#f5f7f8; }
     *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;color:var(--ink);background:var(--muted);line-height:1.6}
-    header{background:var(--brand);color:#fff;padding:22px 16px;text-align:center}
-    header img{max-height:60px;display:block;margin:0 auto 8px}
-    .hero img{width:100%;max-height:520px;object-fit:cover;border-bottom:6px solid var(--brand)}
-    .container{max-width:980px;margin:22px auto;padding:16px}
-    .card{background:var(--paper);border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.06);padding:22px;margin-bottom:18px}
-    h1,h2{color:var(--brand);margin:0 0 12px}
+    body{margin:0;font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;color:var(--ink);background:#eaf6f3;line-height:1.6; padding-top:64px;}
+    /* Top fixed nav (igual que en index) */
+    .topbar{
+      position:fixed; top:0; left:0; right:0; z-index:999;
+      background:#ffffffcc; backdrop-filter: blur(6px);
+      border-bottom:1px solid #e5e8ea;
+    }
+    .topbar .wrap{
+      max-width:1100px; margin:0 auto; display:flex; align-items:center; gap:14px;
+      padding:10px 14px;
+    }
+    .brand{display:flex; align-items:center; gap:10px; font-weight:700; color:var(--brand); text-decoration:none}
+    .brand img{height:28px}
+    .nav{margin-left:auto; display:flex; gap:10px; flex-wrap:wrap}
+    .button{display:inline-block; padding:8px 14px; border-radius:10px; text-decoration:none; font-weight:600; transition:.2s}
+    .button.primary{background:var(--brand); color:#fff}
+    .button.primary:hover{filter:brightness(.92)}
+    .button.ghost{background:transparent; color:var(--brand); border:2px solid var(--brand)}
+    .button.ghost:hover{background:var(--brand); color:#fff}
+    /* Page */
+    header{background:var(--brand); color:#fff; padding:26px 16px; text-align:center}
+    header img{max-height:60px; display:block; margin:0 auto 8px}
+    .hero img{width:100%; max-height:520px; object-fit:cover; border-bottom:6px solid var(--brand)}
+    .container{max-width:980px; margin:22px auto; padding:16px}
+    .card{background:var(--paper); border-radius:14px; box-shadow:0 6px 18px rgba(0,0,0,.06); padding:22px; margin-bottom:18px}
+    h1,h2{color:var(--brand); margin:0 0 12px}
     p{margin:0 0 12px}
-    .btnbar{display:flex;gap:12px;flex-wrap:wrap;margin-top:10px}
-    .button{display:inline-block;padding:10px 16px;border-radius:10px;text-decoration:none;font-weight:600}
-    .button.primary{background:var(--brand);color:#fff}
-    .button.ghost{border:2px solid var(--brand);color:var(--brand);background:transparent}
-    footer.site{padding:16px;text-align:center;color:#555}
-    footer.site a{color:var(--brand);text-decoration:none}
-    /* Gallery grid */
-    .gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin-top:8px}
-    .gallery img{width:100%;height:180px;object-fit:cover;border-radius:12px}
-    /* Testimonials */
-    .testimonials{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:14px}
-    blockquote{margin:0;padding:16px;border-radius:12px;background:#ffffff;border:1px solid #e9eef0}
+    .btnbar{display:flex; gap:12px; flex-wrap:wrap; margin-top:10px}
+    footer.site{padding:16px; text-align:center; color:#555; background:#f5f7f8}
+    footer.site a{color:var(--brand); text-decoration:none}
+    /* Gallery & Testimonials */
+    .gallery{display:grid; grid-template-columns:repeat(auto-fit,minmax(220px,1fr)); gap:12px; margin-top:8px}
+    .gallery img{width:100%; height:180px; object-fit:cover; border-radius:12px}
+    .testimonials{display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:14px}
+    blockquote{margin:0; padding:16px; border-radius:12px; background:#ffffff; border:1px solid #e9eef0}
     blockquote p{margin:0 0 10px}
-    blockquote footer{font-size:.9rem;color:#555}
+    blockquote footer{font-size:.9rem; color:#555}
+    .active{outline:2px solid #00796B22}
+    @media (max-width:640px){ body{padding-top:72px} }
   </style>
 </head>
 <body>
+
+  <!-- NAVBAR FIJO -->
+  <nav class="topbar">
+    <div class="wrap">
+      <a class="brand" href="index.html">
+        <img src="logo.png" alt="Vodoco logo">
+        Vodoco Services
+      </a>
+      <div class="nav">
+        <a href="index.html" class="button ghost" data-nav="home">Home</a>
+        <a href="about.html" class="button ghost" data-nav="about">About Us</a>
+        <a href="https://hellojulio.github.io/CleaningQuoteApp/quote.html" class="button primary" data-nav="quote">Get Quote</a>
+      </div>
+    </div>
+  </nav>
 
   <header>
     <img src="logo.png" alt="Vodoco Services Logo" />
     <h2>Vodoco Services – Professional Cleaning</h2>
   </header>
 
+  <!-- Hero real -->
   <section class="hero">
-    <img src="cleaning-chair.jpg" alt="Vodoco Services – Upholstery & chair cleaning in action">
+    <img src="cleaning-chair.jpg" alt="Vodoco Services team performing upholstery chair cleaning – real job photo">
   </section>
 
   <main class="container">
+    <!-- About -->
     <section class="card">
       <h1>About Us</h1>
       <p>We are a local cleaning business serving Sydney’s Eastern Suburbs. Our team delivers reliable, detail-oriented and friendly service with fair pricing and a 100% satisfaction guarantee.</p>
@@ -53,34 +88,32 @@
       </div>
     </section>
 
+    <!-- Galería -->
     <section class="card">
       <h2>Our Work</h2>
       <div class="gallery">
-        <img src="cleaning-chair.jpg" alt="Upholstery cleaning – dining chairs">
-        <img src="carpet-room.jpg" alt="Carpet steam cleaning – bedroom">
-        <img src="carpet-stairs.jpg" alt="Carpet steam cleaning – staircase">
+        <img src="cleaning-chair.jpg" alt="Upholstery cleaning – dining chairs" loading="lazy">
+        <img src="carpet-room.jpg" alt="Carpet steam cleaning – bedroom" loading="lazy">
+        <img src="carpet-stairs.jpg" alt="Carpet steam cleaning – staircase" loading="lazy">
       </div>
     </section>
 
+    <!-- Testimonios -->
     <section class="card">
       <h2>What Our Clients Say</h2>
       <div class="testimonials">
-
         <blockquote>
           <p>“Vodoco Services have been amazing. They’re reliable, friendly, and always leave my place spotless. It’s such a relief knowing I can count on them every time.”</p>
           <footer>— <strong>Adam</strong></footer>
         </blockquote>
-
         <blockquote>
           <p>“Julio and his crew have been cleaning my house for the last 10+ years. They are extremely reliable, detailed orientated and fast. If I ever need a deeper clean for anything they are happy to oblige and clean very well. Julio is very friendly and him and his crew are lovely too. Highly highly recommended.”</p>
           <footer>— <strong>Lizzie Babarczy</strong></footer>
         </blockquote>
-
         <blockquote>
           <p>“Vodoco Cleaning Services are great with communication, and their quality of work is above expectations. Great local company with an excellent customer focus—could not recommend them highly enough!”</p>
           <footer>— <strong>Catherine Ilic</strong>, Senior Property Manager</footer>
         </blockquote>
-
       </div>
     </section>
   </main>
@@ -92,5 +125,18 @@
     </div>
   </footer>
 
+  <!-- Marca “About” como activo -->
+  <script>
+    (function(){
+      const path = location.pathname.toLowerCase();
+      const links = document.querySelectorAll('.nav a');
+      links.forEach(a=>{
+        const id = a.dataset.nav;
+        if (id==='home' && (path.endsWith('/') || path.endsWith('/index.html'))) a.classList.add('active');
+        if (id==='about' && path.endsWith('/about.html')) a.classList.add('active');
+      });
+    })();
+  </script>
 </body>
 </html>
+
