--- a/index.html
+++ b/index.html
@@ -8,72 +8,63 @@
 
   <style>
     :root { --brand:#00796B; --ink:#333; --paper:#fff; --muted:#eaf6f3; }
+
+    /* ===== TU ESTILO DE PÁGINA (NO TOCADO) ===== */
     *{box-sizing:border-box}
-    /* NO centramos todo el sitio */
     body{
       margin:0; font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;
       color:var(--ink); background:var(--muted); line-height:1.6;
-      padding-top:64px; /* espacio para la barra fija */
+      /* OJO: sin padding-top extra */
     }
-
-    /* NAVBAR fijo (ligero y sin tocar tu layout) */
-    .topbar{
-      position:fixed; top:0; left:0; right:0; z-index:999;
-      background:#ffffffcc; backdrop-filter: blur(6px);
-      border-bottom:1px solid #e5e8ea;
-    }
-    .topbar .wrap{
-      max-width:1100px; margin:0 auto;
-      display:flex; align-items:center; gap:14px;
-      padding:10px 14px;
-    }
-    .brand{display:flex; align-items:center; gap:10px; font-weight:700; color:var(--brand); text-decoration:none}
-    .brand img{height:28px}
-    .nav{margin-left:auto; display:flex; gap:10px; flex-wrap:wrap}
-    .button{display:inline-block; padding:8px 14px; border-radius:10px; text-decoration:none; font-weight:600; transition:.2s}
-    .button.primary{background:var(--brand); color:#fff}
-    .button.primary:hover{filter:brightness(.92)}
-    .button.ghost{background:transparent; color:var(--brand); border:2px solid var(--brand)}
-    .button.ghost:hover{background:var(--brand); color:#fff}
-
-    /* HERO solo centrado (no afecta al resto) */
-    header{
-      background:var(--brand); color:#fff; padding:26px 16px; text-align:center
-    }
+    header{ background:var(--brand); color:#fff; padding:26px 16px; text-align:center }
     header img{ max-height:70px; display:block; margin:0 auto 12px }
-
-    /* Contenido libre con ancho controlado */
     .container{ max-width:1000px; margin:18px auto; padding:0 16px }
     .lead{ font-size:1.05rem; margin:10px 0 0 0 }
-
-    /* Botoneras centradas (solo estas) */
     .btnbar{display:flex; gap:12px; flex-wrap:wrap; justify-content:center; margin:16px 0}
-    .btnbar .button{ text-decoration:none }
-
-    /* Footer intacto */
+    .button{display:inline-block; padding:10px 18px; border-radius:10px; text-decoration:none; font-weight:600; transition:.2s}
+    .button.primary{background:var(--brand); color:#fff}
+    .button.primary:hover{filter:brightness(.92)}
     footer{margin-top:30px; padding:16px; font-size:.9rem; color:#555; background:#f5f7f8; text-align:center}
     footer a{color:var(--brand); text-decoration:none}
 
-    /* Estado activo opcional */
-    .active{outline:2px solid #00796B22}
+    /* ===== NAV AISLADA (prefijo vnav-) ===== */
+    .vnav-bar{
+      position: sticky; top: 0; z-index: 999; /* sticky, sin tocar body */
+      background:#ffffffcc; backdrop-filter: blur(6px);
+      border-bottom:1px solid #e5e8ea;
+    }
+    .vnav-wrap{
+      max-width:1100px; margin:0 auto; display:flex; align-items:center; gap:14px;
+      padding:10px 14px;
+    }
+    .vnav-brand{display:flex; align-items:center; gap:10px; font-weight:700; color:var(--brand); text-decoration:none}
+    .vnav-brand img{height:28px}
+    .vnav-nav{margin-left:auto; display:flex; gap:10px; flex-wrap:wrap}
+    .vnav-btn{display:inline-block; padding:8px 14px; border-radius:10px; text-decoration:none; font-weight:600; transition:.2s}
+    .vnav-btn--ghost{background:transparent; color:var(--brand); border:2px solid var(--brand)}
+    .vnav-btn--ghost:hover{background:var(--brand); color:#fff}
+    .vnav-btn--primary{background:var(--brand); color:#fff}
+    .vnav-btn--primary:hover{filter:brightness(.92)}
+    .vnav-active{outline:2px solid #00796B22}
 
-    /* Móvil: un poquito más de espacio para la barra */
-    @media (max-width:640px){ body{ padding-top:72px } }
+    @media (max-width:640px){
+      .vnav-nav{width:100%; justify-content:flex-end}
+    }
   </style>
 </head>
 <body>
 
-  <!-- NAV -->
-  <nav class="topbar">
-    <div class="wrap">
-      <a class="brand" href="index.html">
+  <!-- NAVBAR AISLADA (NO ROMPE TU LAYOUT) -->
+  <nav class="vnav-bar">
+    <div class="vnav-wrap">
+      <a class="vnav-brand" href="index.html">
         <img src="logo.png" alt="Vodoco logo">
         Vodoco Services
       </a>
-      <div class="nav">
-        <a href="index.html" class="button ghost" data-nav="home">Home</a>
-        <a href="about.html" class="button ghost" data-nav="about">About Us</a>
-        <a href="https://hellojulio.github.io/CleaningQuoteApp/quote.html" class="button primary" data-nav="quote">Get Quote</a>
+      <div class="vnav-nav">
+        <a href="index.html" class="vnav-btn vnav-btn--ghost" data-nav="home">Home</a>
+        <a href="about.html" class="vnav-btn vnav-btn--ghost" data-nav="about">About Us</a>
+        <a href="https://hellojulio.github.io/CleaningQuoteApp/quote.html" class="vnav-btn vnav-btn--primary" data-nav="quote">Get Quote</a>
       </div>
     </div>
   </nav>
@@ -85,9 +76,8 @@
     <p class="lead">Reliable domestic, office & strata cleaning across Sydney. Carpet steam, end of tenancy, and more.</p>
   </header>
 
-  <!-- CONTENIDO (deja aquí tus bloques existentes si tienes) -->
+  <!-- CONTENIDO -->
   <main class="container">
-    <!-- Ejemplo: botones de contacto -->
     <div class="btnbar">
       <a href="tel:0413387095" class="button primary">Call: 0413 387 095</a>
       <a href="https://wa.me/61413387095" class="button primary">WhatsApp</a>
@@ -99,15 +89,14 @@
     <p><a href="mailto:hello.vodoco@outlook.com">hello.vodoco@outlook.com</a></p>
   </footer>
 
-  <!-- Marca link activo (opcional) -->
   <script>
+    // Marca activo (solo dentro del nav aislado)
     (function(){
       const path = location.pathname.toLowerCase();
-      const links = document.querySelectorAll('.nav a');
-      links.forEach(a=>{
+      document.querySelectorAll('[data-nav]').forEach(a=>{
         const id = a.dataset.nav;
-        if (id==='home' && (path.endsWith('/') || path.endsWith('/index.html'))) a.classList.add('active');
-        if (id==='about' && path.endsWith('/about.html')) a.classList.add('active');
+        if (id==='home' && (path.endsWith('/') || path.endsWith('/index.html'))) a.classList.add('vnav-active');
+        if (id==='about' && path.endsWith('/about.html')) a.classList.add('vnav-active');
       });
     })();
   </script>
